[package]
name = "sysproxy"
version = "0.3.0"
edition = "2021"
authors = ["zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/sysproxy-rs.git"
keywords = ["system-proxy", "proxy", "networksetup", "gsettings"]
description = "A library for set/get system proxy. Supports Windows, macOS and linux (via gsettings)."

[dependencies]
log = "0.4.33"
thiserror = "2.0.19"
iptools = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "^3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { version = "0.56.0", features = ["transactions"] }
windows = { version = "0.62.2", features = [
    "Win32_Networking_WinInet",
    "Win32_NetworkManagement_Rras",
    "Win32_Foundation",
] }

[dev-dependencies]
serial_test = "3.5.0"

[features]
default = ["iptools"]
