[package]
name = "systemproxy"
version = "0.3.2"
edition = "2021"
authors = ["ssrlive", "zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ssrlive/systemproxy.git"
keywords = ["system", "proxy", "networksetup", "gsettings"]
description = "A library for set/get system proxy. Supports Windows, macOS and linux (via gsettings)."

[dependencies]
log = "0.4.33"
thiserror = "2.0.19"
iptools = { version = "0.5.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "^3.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Networking_WinInet",
    "Win32_System_Registry",
    "Win32_Foundation",
] }

[dev-dependencies]
serial_test = "3.5.0"

[features]
default = ["iptools"]
